language/tools/move-cli/tests/testsuite/use_named_address/args.exp
Command `sandbox publish src/modules/M_no_named.move`:
Command `sandbox publish src/modules/N.move`:
error[E03001]: address with no value
  ┌─ src/modules/N.move:2:8
  │
2 │ module A::N {
  │        ^ address 'A' is not assigned a value. Try assigning it a value when calling the compiler

error[E03001]: address with no value
  ┌─ src/modules/N.move:4:9
  │
4 │         A::M::useless()
  │         ^ address 'A' is not assigned a value

error[E03002]: unbound module
  ┌─ src/modules/N.move:4:9
  │
4 │         A::M::useless()
  │         ^^^^ Unbound module 'A::M'

Command `sandbox clean`:
Command `sandbox publish src/modules/M.move -a A=0x42`:
Command `sandbox publish src/modules/N.move`:
